// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/docs/DocumentPreview Snapshots Default 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title justify-space-between py-2"
    >
      <h3
        class="grey--text"
      >
        
      Preview Document
    
      </h3>
       
      <button
        class="mr-0 v-btn v-btn--flat theme--light primary--text"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Close
    
        </div>
      </button>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout column justify-stretch"
      >
        <div
          class="layout d-flex justify-content-between row wrap"
        >
          <div
            class="flex xs12"
          >
            <!---->
          </div>
           
          <div
            style="text-align: right;"
          >
            <button
              class="white--text v-btn v-btn--disabled theme--light grey--text"
              disabled="disabled"
              download=""
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Edit Contract
          
              </div>
            </button>
             
            <button
              class="v-btn v-btn--disabled v-btn--depressed theme--light primary--text"
              disabled="disabled"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Accept contract
          
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="mx-2 ff-document-preview__content"
        >
          <div
            class="layout align-center pa-2"
          >
            <div
              class="flex sm3 xs12"
            >
              <div
                aria-label="main logo"
                class="v-responsive v-image"
                role="img"
                style="height: 50px; width: 160px;"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  mode="in-out"
                  name="fade-transition"
                  style="background-position: center center;"
                />
                <div
                  class="v-responsive__content"
                />
              </div>
            </div>
             
            <hr
              class="v-divider v-divider--vertical theme--light"
            />
             
            <div
              class="flex title primary--text font-weight-bold sm6 xs12 pl-2"
            >
              
            
          
            </div>
             
            <!---->
          </div>
           
          <hr
            class="v-divider theme--light"
          />
           
          <div
            class="flex xs12 py-2"
          >
            <div />
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Food Fleet Signature
            
              </div>
               
              <!---->
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Restaurant Owner Name:
            
              </div>
               
              <div>
                
              
            
              </div>
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/docs/DocumentPreview Snapshots End Of Scroll 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
    preview-dialog="true"
  >
    <div
      class="v-card__title justify-space-between py-2"
    >
      <h3
        class="grey--text"
      >
        
      Preview Document
    
      </h3>
       
      <button
        class="mr-0 v-btn v-btn--flat theme--light primary--text"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Close
    
        </div>
      </button>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout column justify-stretch"
      >
        <div
          class="layout d-flex justify-content-between row wrap"
        >
          <div
            class="flex xs12"
          >
            <button
              class="v-btn v-btn--disabled theme--light primary--text"
              disabled="disabled"
              download=""
              target="_blank"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Download PDF
          
              </div>
            </button>
          </div>
           
          <div
            style="text-align: right;"
          >
            <button
              class="white--text v-btn v-btn--disabled theme--light grey--text"
              disabled="disabled"
              download=""
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Edit Contract
          
              </div>
            </button>
             
            <button
              class="v-btn v-btn--disabled v-btn--depressed theme--light primary--text"
              disabled="disabled"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Accept contract
          
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="mx-2 ff-document-preview__content"
        >
          <div
            class="layout align-center pa-2"
          >
            <div
              class="flex sm3 xs12"
            >
              <div
                aria-label="main logo"
                class="v-responsive v-image"
                role="img"
                style="height: 50px; width: 160px;"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  mode="in-out"
                  name="fade-transition"
                  style="background-position: center center;"
                />
                <div
                  class="v-responsive__content"
                />
              </div>
            </div>
             
            <hr
              class="v-divider v-divider--vertical theme--light"
            />
             
            <div
              class="flex title primary--text font-weight-bold sm6 xs12 pl-2"
            >
              
            
          
            </div>
             
            <div
              class="flex body-2 text-xs-right sm6 xs12"
            >
              
            Expiration Date: 10 / 09 / 2019
          
            </div>
          </div>
           
          <hr
            class="v-divider theme--light"
          />
           
          <div
            class="flex xs12 py-2"
          >
            <div>
              

              <h3>
                Catering Contract
              </h3>
              
      
              <p>
                
        This Catering Contract is entered into between 2 Brothers Kitchen (“Caterer”) and John Smith (“Client”) (together, “Parties”) and sets forth the agreement between the Parties relating to catering services to be provided by the Caterer for Client for the event identified in this Contract.
      
              </p>
              
      
              <h3>
                1. Event Details
              </h3>
              
      
              <p>
                
      Client is hiring Caterer to provide food and beverages, and related services, for the following event (“Event”):
      Date: June 12, 2019
      Event start time (for guests): 10:00 AM
      Event end time (for guests): 4:00 PM
      Location: LA Stadium (“Venue”)
      Estimated number of guests: 300
      
              </p>
              
      
              <h3>
                2. Menu to Be Served
              </h3>
              
      
              <p>
                
      The Parties have agreed to the menu attached to this Catering Agreement as Exhibit A. Caterer reserves the right to make small changes to the menu if key ingredients are unable to be sourced due to reasons beyond the control of the Parties. The following limitations will apply to this reservation of right - 3. No alcoholic beverages will be served without a separate agreement relating thereto.
      
              </p>
              
      
              <h3>
                3. Coordination with Venue
              </h3>
              
      
              <p>
                
      Caterer will need to have access to the Venue no later than 93 hours in advance of the Start Time for the Event, and 17 hours after the End Time for clean up. Client will make all necessary arrangements, at Client’s expense, to get this access arranged.
      In exchange for the services of Caterer as specified in this Catering Contract, Client will pay to
      Caterer $ 2 per person attending the event, but in no event less than the
      Guest Count provided by Client to Caterer one week in advance of the Event. As of the signing of
      this Contract, the total amount is estimated to be $ 100 (“Estimated Total
      Cost”).
      Payment will be made to the Caterer as follows: $ 100 deposit due on the date of signing, and the balance of approximately $ 100 will be due one week in advance of the event. The exact amount due will be determined, and provided from Client to Caterer in writing, one week in advance of the Event along with a Final Guest Count.
      
              </p>
              
      
              <h3>
                5. Responsibilities for Related Costs
              </h3>
              
      
              <p>
                
      Client is solely responsible for all costs and/or deposits relating to use of the Venue, and for obtaining any necessary permissions, authorizations, or other requirement of Caterer providing services at the Venue.
      
              </p>
              
      
              <h3>
                6. Insurance and Indemnification
              </h3>
              
      
              <p>
                
      Caterer has, or will obtain, general liability insurance relating to Caterer’s services at the Event.
      However, Client will indemnify and hold harmless Caterer for any damage, theft, or loss of Caterer’s
      property occurring at the event, causes by any of Client’s guests.
      
              </p>
              
      
              <h3>
                7. Cancellation
              </h3>
              
      
              <p>
                
      If the Client needs to cancel the event, Client must provide written notice to Caterer along with any
      required cancellation fee described in this Catering Contract, to effect cancellation.
      Client understands that upon entering into this Contract, Caterer is committing time and resources to
      this Event and thus cancellation would result in lost income and lost business opportunities in an
      amount hard to precisely calculate. Therefore, the following cancellation limitations will apply.
      If Client requests cancellation of this Contract 90 days or more before the Event, Caterer shall be
      entitled to 100 percent of the Estimated Total Cost.
      If Client requests cancellation 45-89 days before the Event, Caterer shall be entitled to
      100 percent of the Estimated Total Costs.
      If Client requests cancellation 31-44 days before the Event, Caterer shall be entitled to
      100 .
      After 30 days in advance of the Event, Caterer shall be entitled to 100 percent of the Estimated Total
      Cost.
      The Client’s deposit will be credited against the cancellation fees owed. Any balance will be payable
      upon the notice of cancellation.
      
              </p>
              
      
              <h3>
                8. Legal Compliance
              </h3>
              
      
              <p>
                
      Caterer will work in compliance with all applicable local health department rules and regulations
      relating to food preparation and food service.
      
              </p>
              
      
              <h3>
                9. Assignment
              </h3>
              
      
              <p>
                
      This Contract cannot be assigned by either Party without the other’s written consent, with the
      exception set forth in paragraph 10, below.
      
              </p>
              
      
              <h3>
                10. Limitation of Remedies
              </h3>
              
      
              <p>
                
      If Caterer cannot fulfill its obligations under this Contract for reasons outside of its control, Caterer
      may locate and retain a replacement catering company at no additional cost to Client, or refund
      Client’s money in full. Caterer will not be responsible for any additional damages or compensation
      under these circumstances.
      
              </p>
              
      
              <h3>
                11. Resolution of Disputes
              </h3>
              
      
              <p>
                
      The Parties agree to not post any negative information about the other arising out of this Contract or
      Event on any online forum or website without providing advance written notice of the intended
      content thereof, and providing the other party with an opportunity to resolve any issues between the
      parties amicably.
              </p>
              
      
              <h3>
                12. Jurisdiction and Venue
              </h3>
              
      
              <p>
                
      This Contract will be interpreted according to the laws of the State of [State] and any legal action
      must be filed in the County of [County] in the State of [State] .
              </p>
              
      
              <h3>
                13. Entire Agreement
              </h3>
              
      
              <p>
                This document, along with its exhibits and attachments, constitutes the entire agreement between
      the Parties.
              </p>
              

            </div>
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Food Fleet Signature
            
              </div>
               
              <!---->
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                eligendi
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Restaurant Owner Name:
            
              </div>
               
              <div>
                
              Level 6 User
            
              </div>
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                Level 6 User
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/docs/DocumentPreview Snapshots Populated 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
    preview-dialog="true"
  >
    <div
      class="v-card__title justify-space-between py-2"
    >
      <h3
        class="grey--text"
      >
        
      Preview Document
    
      </h3>
       
      <button
        class="mr-0 v-btn v-btn--flat theme--light primary--text"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Close
    
        </div>
      </button>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout column justify-stretch"
      >
        <div
          class="layout d-flex justify-content-between row wrap"
        >
          <div
            class="flex xs12"
          >
            <button
              class="v-btn v-btn--disabled theme--light primary--text"
              disabled="disabled"
              download=""
              target="_blank"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Download PDF
          
              </div>
            </button>
          </div>
           
          <div
            style="text-align: right;"
          >
            <button
              class="white--text v-btn v-btn--disabled theme--light grey--text"
              disabled="disabled"
              download=""
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Edit Contract
          
              </div>
            </button>
             
            <button
              class="v-btn v-btn--disabled v-btn--depressed theme--light primary--text"
              disabled="disabled"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Accept contract
          
              </div>
            </button>
          </div>
        </div>
         
        <div
          class="mx-2 ff-document-preview__content"
        >
          <div
            class="layout align-center pa-2"
          >
            <div
              class="flex sm3 xs12"
            >
              <div
                aria-label="main logo"
                class="v-responsive v-image"
                role="img"
                style="height: 50px; width: 160px;"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  mode="in-out"
                  name="fade-transition"
                  style="background-position: center center;"
                />
                <div
                  class="v-responsive__content"
                />
              </div>
            </div>
             
            <hr
              class="v-divider v-divider--vertical theme--light"
            />
             
            <div
              class="flex title primary--text font-weight-bold sm6 xs12 pl-2"
            >
              
            
          
            </div>
             
            <div
              class="flex body-2 text-xs-right sm6 xs12"
            >
              
            Expiration Date: 10 / 09 / 2019
          
            </div>
          </div>
           
          <hr
            class="v-divider theme--light"
          />
           
          <div
            class="flex xs12 py-2"
          >
            <div>
              

              <h3>
                Catering Contract
              </h3>
              
      
              <p>
                
        This Catering Contract is entered into between 2 Brothers Kitchen (“Caterer”) and John Smith (“Client”) (together, “Parties”) and sets forth the agreement between the Parties relating to catering services to be provided by the Caterer for Client for the event identified in this Contract.
      
              </p>
              
      
              <h3>
                1. Event Details
              </h3>
              
      
              <p>
                
      Client is hiring Caterer to provide food and beverages, and related services, for the following event (“Event”):
      Date: June 12, 2019
      Event start time (for guests): 10:00 AM
      Event end time (for guests): 4:00 PM
      Location: LA Stadium (“Venue”)
      Estimated number of guests: 300
      
              </p>
              
      
              <h3>
                2. Menu to Be Served
              </h3>
              
      
              <p>
                
      The Parties have agreed to the menu attached to this Catering Agreement as Exhibit A. Caterer reserves the right to make small changes to the menu if key ingredients are unable to be sourced due to reasons beyond the control of the Parties. The following limitations will apply to this reservation of right - 3. No alcoholic beverages will be served without a separate agreement relating thereto.
      
              </p>
              
      
              <h3>
                3. Coordination with Venue
              </h3>
              
      
              <p>
                
      Caterer will need to have access to the Venue no later than 93 hours in advance of the Start Time for the Event, and 17 hours after the End Time for clean up. Client will make all necessary arrangements, at Client’s expense, to get this access arranged.
      In exchange for the services of Caterer as specified in this Catering Contract, Client will pay to
      Caterer $ 2 per person attending the event, but in no event less than the
      Guest Count provided by Client to Caterer one week in advance of the Event. As of the signing of
      this Contract, the total amount is estimated to be $ 100 (“Estimated Total
      Cost”).
      Payment will be made to the Caterer as follows: $ 100 deposit due on the date of signing, and the balance of approximately $ 100 will be due one week in advance of the event. The exact amount due will be determined, and provided from Client to Caterer in writing, one week in advance of the Event along with a Final Guest Count.
      
              </p>
              
      
              <h3>
                5. Responsibilities for Related Costs
              </h3>
              
      
              <p>
                
      Client is solely responsible for all costs and/or deposits relating to use of the Venue, and for obtaining any necessary permissions, authorizations, or other requirement of Caterer providing services at the Venue.
      
              </p>
              
      
              <h3>
                6. Insurance and Indemnification
              </h3>
              
      
              <p>
                
      Caterer has, or will obtain, general liability insurance relating to Caterer’s services at the Event.
      However, Client will indemnify and hold harmless Caterer for any damage, theft, or loss of Caterer’s
      property occurring at the event, causes by any of Client’s guests.
      
              </p>
              
      
              <h3>
                7. Cancellation
              </h3>
              
      
              <p>
                
      If the Client needs to cancel the event, Client must provide written notice to Caterer along with any
      required cancellation fee described in this Catering Contract, to effect cancellation.
      Client understands that upon entering into this Contract, Caterer is committing time and resources to
      this Event and thus cancellation would result in lost income and lost business opportunities in an
      amount hard to precisely calculate. Therefore, the following cancellation limitations will apply.
      If Client requests cancellation of this Contract 90 days or more before the Event, Caterer shall be
      entitled to 100 percent of the Estimated Total Cost.
      If Client requests cancellation 45-89 days before the Event, Caterer shall be entitled to
      100 percent of the Estimated Total Costs.
      If Client requests cancellation 31-44 days before the Event, Caterer shall be entitled to
      100 .
      After 30 days in advance of the Event, Caterer shall be entitled to 100 percent of the Estimated Total
      Cost.
      The Client’s deposit will be credited against the cancellation fees owed. Any balance will be payable
      upon the notice of cancellation.
      
              </p>
              
      
              <h3>
                8. Legal Compliance
              </h3>
              
      
              <p>
                
      Caterer will work in compliance with all applicable local health department rules and regulations
      relating to food preparation and food service.
      
              </p>
              
      
              <h3>
                9. Assignment
              </h3>
              
      
              <p>
                
      This Contract cannot be assigned by either Party without the other’s written consent, with the
      exception set forth in paragraph 10, below.
      
              </p>
              
      
              <h3>
                10. Limitation of Remedies
              </h3>
              
      
              <p>
                
      If Caterer cannot fulfill its obligations under this Contract for reasons outside of its control, Caterer
      may locate and retain a replacement catering company at no additional cost to Client, or refund
      Client’s money in full. Caterer will not be responsible for any additional damages or compensation
      under these circumstances.
      
              </p>
              
      
              <h3>
                11. Resolution of Disputes
              </h3>
              
      
              <p>
                
      The Parties agree to not post any negative information about the other arising out of this Contract or
      Event on any online forum or website without providing advance written notice of the intended
      content thereof, and providing the other party with an opportunity to resolve any issues between the
      parties amicably.
              </p>
              
      
              <h3>
                12. Jurisdiction and Venue
              </h3>
              
      
              <p>
                
      This Contract will be interpreted according to the laws of the State of [State] and any legal action
      must be filed in the County of [County] in the State of [State] .
              </p>
              
      
              <h3>
                13. Entire Agreement
              </h3>
              
      
              <p>
                This document, along with its exhibits and attachments, constitutes the entire agreement between
      the Parties.
              </p>
              

            </div>
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Food Fleet Signature
            
              </div>
               
              <!---->
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                eligendi
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Restaurant Owner Name:
            
              </div>
               
              <div>
                
              Level 6 User
            
              </div>
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                Level 6 User
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/docs/DocumentPreview Snapshots Signed 1`] = `
<div
  class="container"
>
  <div
    class="v-card v-sheet theme--light"
  >
    <div
      class="v-card__title justify-space-between py-2"
    >
      <h3
        class="grey--text"
      >
        
      Preview Document
    
      </h3>
       
      <button
        class="mr-0 v-btn v-btn--flat theme--light primary--text"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
      Close
    
        </div>
      </button>
    </div>
     
    <hr
      class="v-divider theme--light"
    />
     
    <div
      class="v-card__text"
    >
      <div
        class="layout column justify-stretch"
      >
        <div
          class="layout d-flex justify-content-between row wrap"
        >
          <div
            class="flex xs12"
          >
            <button
              class="v-btn v-btn--disabled theme--light primary--text"
              disabled="disabled"
              download=""
              target="_blank"
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Download PDF
          
              </div>
            </button>
          </div>
           
          <div
            style="text-align: right;"
          >
            <button
              class="white--text v-btn v-btn--disabled theme--light grey--text"
              disabled="disabled"
              download=""
              type="button"
            >
              <div
                class="v-btn__content"
              >
                
            Edit Contract
          
              </div>
            </button>
             
            <!---->
          </div>
        </div>
         
        <div
          class="mx-2 ff-document-preview__content"
        >
          <div
            class="layout align-center pa-2"
          >
            <div
              class="flex sm3 xs12"
            >
              <div
                aria-label="main logo"
                class="v-responsive v-image"
                role="img"
                style="height: 50px; width: 160px;"
              >
                <div
                  class="v-image__image v-image__image--preload v-image__image--cover"
                  mode="in-out"
                  name="fade-transition"
                  style="background-position: center center;"
                />
                <div
                  class="v-responsive__content"
                />
              </div>
            </div>
             
            <hr
              class="v-divider v-divider--vertical theme--light"
            />
             
            <div
              class="flex title primary--text font-weight-bold sm6 xs12 pl-2"
            >
              
            
          
            </div>
             
            <div
              class="flex body-2 text-xs-right sm6 xs12"
            >
              
            Expiration Date: 10 / 09 / 2019
          
            </div>
          </div>
           
          <hr
            class="v-divider theme--light"
          />
           
          <div
            class="flex xs12 py-2"
          >
            <div>
              

              <h3>
                Catering Contract
              </h3>
              
      
              <p>
                
        This Catering Contract is entered into between 2 Brothers Kitchen (“Caterer”) and John Smith (“Client”) (together, “Parties”) and sets forth the agreement between the Parties relating to catering services to be provided by the Caterer for Client for the event identified in this Contract.
      
              </p>
              
      
              <h3>
                1. Event Details
              </h3>
              
      
              <p>
                
      Client is hiring Caterer to provide food and beverages, and related services, for the following event (“Event”):
      Date: June 12, 2019
      Event start time (for guests): 10:00 AM
      Event end time (for guests): 4:00 PM
      Location: LA Stadium (“Venue”)
      Estimated number of guests: 300
      
              </p>
              
      
              <h3>
                2. Menu to Be Served
              </h3>
              
      
              <p>
                
      The Parties have agreed to the menu attached to this Catering Agreement as Exhibit A. Caterer reserves the right to make small changes to the menu if key ingredients are unable to be sourced due to reasons beyond the control of the Parties. The following limitations will apply to this reservation of right - 3. No alcoholic beverages will be served without a separate agreement relating thereto.
      
              </p>
              
      
              <h3>
                3. Coordination with Venue
              </h3>
              
      
              <p>
                
      Caterer will need to have access to the Venue no later than 93 hours in advance of the Start Time for the Event, and 17 hours after the End Time for clean up. Client will make all necessary arrangements, at Client’s expense, to get this access arranged.
      In exchange for the services of Caterer as specified in this Catering Contract, Client will pay to
      Caterer $ 2 per person attending the event, but in no event less than the
      Guest Count provided by Client to Caterer one week in advance of the Event. As of the signing of
      this Contract, the total amount is estimated to be $ 100 (“Estimated Total
      Cost”).
      Payment will be made to the Caterer as follows: $ 100 deposit due on the date of signing, and the balance of approximately $ 100 will be due one week in advance of the event. The exact amount due will be determined, and provided from Client to Caterer in writing, one week in advance of the Event along with a Final Guest Count.
      
              </p>
              
      
              <h3>
                5. Responsibilities for Related Costs
              </h3>
              
      
              <p>
                
      Client is solely responsible for all costs and/or deposits relating to use of the Venue, and for obtaining any necessary permissions, authorizations, or other requirement of Caterer providing services at the Venue.
      
              </p>
              
      
              <h3>
                6. Insurance and Indemnification
              </h3>
              
      
              <p>
                
      Caterer has, or will obtain, general liability insurance relating to Caterer’s services at the Event.
      However, Client will indemnify and hold harmless Caterer for any damage, theft, or loss of Caterer’s
      property occurring at the event, causes by any of Client’s guests.
      
              </p>
              
      
              <h3>
                7. Cancellation
              </h3>
              
      
              <p>
                
      If the Client needs to cancel the event, Client must provide written notice to Caterer along with any
      required cancellation fee described in this Catering Contract, to effect cancellation.
      Client understands that upon entering into this Contract, Caterer is committing time and resources to
      this Event and thus cancellation would result in lost income and lost business opportunities in an
      amount hard to precisely calculate. Therefore, the following cancellation limitations will apply.
      If Client requests cancellation of this Contract 90 days or more before the Event, Caterer shall be
      entitled to 100 percent of the Estimated Total Cost.
      If Client requests cancellation 45-89 days before the Event, Caterer shall be entitled to
      100 percent of the Estimated Total Costs.
      If Client requests cancellation 31-44 days before the Event, Caterer shall be entitled to
      100 .
      After 30 days in advance of the Event, Caterer shall be entitled to 100 percent of the Estimated Total
      Cost.
      The Client’s deposit will be credited against the cancellation fees owed. Any balance will be payable
      upon the notice of cancellation.
      
              </p>
              
      
              <h3>
                8. Legal Compliance
              </h3>
              
      
              <p>
                
      Caterer will work in compliance with all applicable local health department rules and regulations
      relating to food preparation and food service.
      
              </p>
              
      
              <h3>
                9. Assignment
              </h3>
              
      
              <p>
                
      This Contract cannot be assigned by either Party without the other’s written consent, with the
      exception set forth in paragraph 10, below.
      
              </p>
              
      
              <h3>
                10. Limitation of Remedies
              </h3>
              
      
              <p>
                
      If Caterer cannot fulfill its obligations under this Contract for reasons outside of its control, Caterer
      may locate and retain a replacement catering company at no additional cost to Client, or refund
      Client’s money in full. Caterer will not be responsible for any additional damages or compensation
      under these circumstances.
      
              </p>
              
      
              <h3>
                11. Resolution of Disputes
              </h3>
              
      
              <p>
                
      The Parties agree to not post any negative information about the other arising out of this Contract or
      Event on any online forum or website without providing advance written notice of the intended
      content thereof, and providing the other party with an opportunity to resolve any issues between the
      parties amicably.
              </p>
              
      
              <h3>
                12. Jurisdiction and Venue
              </h3>
              
      
              <p>
                
      This Contract will be interpreted according to the laws of the State of [State] and any legal action
      must be filed in the County of [County] in the State of [State] .
              </p>
              
      
              <h3>
                13. Entire Agreement
              </h3>
              
      
              <p>
                This document, along with its exhibits and attachments, constitutes the entire agreement between
      the Parties.
              </p>
              

            </div>
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Food Fleet Signature
            
              </div>
               
              <div
                class="ff-document-preview__signature"
              >
                
              eligendi
            
              </div>
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                eligendi
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
               
              <div
                class="ff-document-preview__watermark"
              >
                <div>
                  Accepted
                </div>
                 
                <div
                  class="ff-document-preview__watermark__date"
                >
                  <span
                    style="text-transform: lowercase;"
                  >
                    on
                  </span>
                   Nov 26, 2020 12:00 pm 
              
                </div>
              </div>
            </div>
          </div>
        </div>
         
        <div
          class="layout mx-2"
        >
          <div
            class="layout"
          >
            <div
              class="flex mr-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Restaurant Owner Name:
            
              </div>
               
              <div>
                
              Level 6 User
            
              </div>
            </div>
             
            <div
              class="flex mx-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Printed Name
            
              </div>
               
              <span
                class="text-uppercase"
              >
                Level 6 User
              </span>
            </div>
             
            <div
              class="flex ml-3 py-3 sm4"
            >
              <hr
                class="v-divider theme--light"
              />
               
              <div
                class="body-1 mt-2"
              >
                
              Date
            
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
